readme: fix grammar and add missing JVM flag to search command